--- a/ss4_git_&_html/tao_danh_sach.html
+++ b/ss4_git_&_html/tao_danh_sach.html
@@ -6,19 +6,25 @@
 </head>
 <body>
 <h1>Việt Nam</h1>
-<ul><li>Hà Nội</li>
+<ul>
+    <li>Hà Nội</li>
     <li>Sài Gòn</li>
     <li>Huế</li>
-    <li>Đà Nẵng</li></ul>
+    <li>Đà Nẵng</li>
+</ul>
 <h1>Hoa Kỳ</h1>
-<ul><li>New York</li>
+<ul>
+    <li>New York</li>
     <li>Los Angeles</li>
     <li>Chicago</li>
-    <li>Houston</li></ul>
+    <li>Houston</li>
+</ul>
 <h1>Trung Quốc</h1>
-<ul><li>Beijing</li>
+<ul>
+    <li>Beijing</li>
     <li>Chongqing</li>
     <li>Shanghai</li>
-    <li>Tianjin</li></ul>
+    <li>Tianjin</li>
+</ul>
 </body>
 </html>
