--- a/ss7_bien_kieu_du_lieu_va_toan_tu/bai_tap_bien_kieu_du_lieu_va_toan_tu/bai_1.html
+++ b/ss7_bien_kieu_du_lieu_va_toan_tu/bai_tap_bien_kieu_du_lieu_va_toan_tu/bai_1.html
@@ -9,8 +9,8 @@
 <input type="number" id="hoahoc" placeholder="nhập điểm"><strong> Điểm hóa học </strong><br>
 <input type="number" id="sinhhoc" placeholder="nhập điểm"><strong> Điểm sinh học </strong><br>
 <button onclick="kiemTra()">Điểm trung bình và tổng</button>
-<p id="tong"></p>
-<p id="dtb"></p>
+<div id="tong"></div>
+<div id="dtb"></div>
 </body>
 <script>
     function kiemTra() {
