--- a/ss10_cau_truc_lap/sinh-bang_cuu_chuong.html
+++ b/ss10_cau_truc_lap/sinh-bang_cuu_chuong.html
@@ -14,7 +14,7 @@
         for (let j = 1; j <= 10; j++) {
             timeTable += "<td>" + j + "x" + i + "=" + i * j + "</td>";
         }
-        timeTable += "<tr>";
+        timeTable += "</tr>";
     }
     timeTable += "</table>";
     document.write(timeTable);
