--- a/ss8_cau_truc_dieu_kien/luyen_tap_cau_truc_dieu_kien_1/giai_thuat.html
+++ b/ss8_cau_truc_dieu_kien/luyen_tap_cau_truc_dieu_kien_1/giai_thuat.html
@@ -11,7 +11,7 @@
         <td rowspan="4" style="background-color: chartreuse">System Apps</td>
         <td rowspan="3"><font color="red">SystemEnv</font></td><
         <td>App Test</td>
-        <td rowspan="6"><font color="blue">App Test</font></td>
+<!--        <td rowspan="6"><font color="blue">App Test</font></td>-->
     </tr>
     <tr>
         <td>App Memory</td>
@@ -22,6 +22,7 @@
     <tr>
         <td><font color="red">SystemEnv2</font></td>
         <td>System Test</td>
+        <td><font color="blue">App Test</font></td>
     </tr>
     <tr>
         <td rowspan="2" style="background-color: aqua">System Memory</td>
