--- a/ss8_cau_truc_dieu_kien/luyen_tap_cau_truc_dieu_kien_2/demo_nguyen_thi_tam.html
+++ b/ss8_cau_truc_dieu_kien/luyen_tap_cau_truc_dieu_kien_2/demo_nguyen_thi_tam.html
@@ -22,7 +22,7 @@
     <input type="checkbox">Tập thể dục
     <input type="checkbox">Du lịch
     <input type="checkbox">Mua sắm
-    <input type="checkbox">Chơi thẻ thao<br>
+    <input type="checkbox">Chơi thể thao<br>
     <strong>Sức khỏe:</strong> <input type="radio" name="gender">Tốt
     <input type="radio" name="gender">Bình thường
     <input type="radio" name="gender">Yếu<br>
