--- a/ss5_html_form_&_table/tao_bang_nang_cao.html
+++ b/ss5_html_form_&_table/tao_bang_nang_cao.html
@@ -5,17 +5,19 @@
     <title>Tảo bảng nâng cao</title>
     <style>
         body {
-            background-color: darkblue;
+            background-color: limegreen;
         }
 
         table > tr > td {
-            width: 50px;
-            height: 50px;
+            width: 100px;
+            height: 100px;
             background-color: blue;
         }
+
         table > tr > td:nth-child(even) {
-            background-color: white;
+            background-color: red;
         }
+
         td {
             padding: 30px;
         }
@@ -69,7 +71,6 @@
     </tr>
     <tr>
         <td>D</td>
-
         <td style="background-color: black"></td>
         <td style="background-color: white"></td>
         <td style="background-color: black"></td>
@@ -92,7 +93,6 @@
     </tr>
     <tr>
         <td>F</td>
-
         <td style="background-color: black"></td>
         <td style="background-color: white"></td>
         <td style="background-color: black"></td>
@@ -115,7 +115,6 @@
     </tr>
     <tr>
         <td>H</td>
-
         <td style="background-color: black"></td>
         <td style="background-color: white"></td>
         <td style="background-color: black"></td>
