--- a/ss12_mang/su_dung_ham_co_san_cua_mang/bai_3.html
+++ b/ss12_mang/su_dung_ham_co_san_cua_mang/bai_3.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     let string = prompt("Nhập chuỗi ký tự");
-    let arr1 = string.split(" ");
+    let arr1 = string.split();
     document.write(arr1 + "<br>");
     for (let i = 0; i < arr1.length; i++) {
         if (arr1[i] !== "") {
