--- a/ss16_OOP/xay_dung_lop_mo_ta_dien_thoai.html
+++ b/ss16_OOP/xay_dung_lop_mo_ta_dien_thoai.html
@@ -5,6 +5,40 @@
     <title>Title</title>
 </head>
 <body>
+<script>
+    class Mobile {
+        constructor(pin, hopThuDen, hopThuDi, thuSoanThao) {
+            this.pin = pin;
+            this.hopThuDen = hopThuDen;
+            this.hopThuDi = hopThuDi;
+            this.thuSoanThao = thuSoanThao;
+        }
+        phoneStatus() {
 
+        }
+        turnAndOf() {
+
+        }
+        charge() {
+
+        }
+        texting() {
+
+        }
+        receiveMessages() {
+
+        }
+        sendMessage() {
+
+        }
+        seeNewsInInbox() {
+
+        }
+        viewSentMessages() {
+
+        }
+    }
+
+</script>
 </body>
 </html>
