--- a/ss10_cau_truc_lap/luyen_tap_vong_lap_1/bai_8.html
+++ b/ss10_cau_truc_lap/luyen_tap_vong_lap_1/bai_8.html
@@ -27,7 +27,8 @@
             number1 = parseInt(prompt("Mời bạn đoán lại"));
         }
         while (number1 === randomNumber) {
-            document.getElementById("ketQua").innerHTML = "Chúc mừng bạn đã đoán đúng, phần thưởng của bạn sẽ là 1 chiếc iphone 14 pro max" + "<br>" + "<img src='https://www.viettablet.com/images/companies/1/0-hinh-moi/tin-tuc/2022/thang-5/10/iphone-14-pro-max-mau-sunset-gold.jpg?1652171734072'>";
+            document.getElementById("ketQua").innerHTML = "Chúc mừng bạn đã đoán đúng, phần thưởng của bạn sẽ là 1 chiếc iphone 14 pro max" + "<br>" +
+                "<img src='https://www.viettablet.com/images/companies/1/0-hinh-moi/tin-tuc/2022/thang-5/10/iphone-14-pro-max-mau-sunset-gold.jpg?1652171734072'>";
             break;
         }
     }
