--- a/ss12_mang/luyen_tap_mang_2/bai_1.html
+++ b/ss12_mang/luyen_tap_mang_2/bai_1.html
@@ -12,7 +12,7 @@
         let arr = [];
         let m = +prompt("Nhập độ dài của mảng 1 chiều thứ " + (i + 1));
         for (let j = 0; j < m; j++) {
-            let e = prompt("Nhập phần tử thứ " + (j + 1) + " của mảng " + (i + 1));
+            let e = +prompt("Nhập phần tử thứ " + (j + 1) + " của mảng " + (i + 1));
             arr.push(e);
         }
         arr2Chieu.push(arr);
