--- a/ss7_bien_kieu_du_lieu_va_toan_tu/bai_tap_bien_kieu_du_lieu_va_toan_tu/bai_3.html
+++ b/ss7_bien_kieu_du_lieu_va_toan_tu/bai_tap_bien_kieu_du_lieu_va_toan_tu/bai_3.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    input = prompt("Nhập bán kính");
+    let input = prompt("Nhập bán kính");
     const b = 3.14;
     let S = input * input * b;
     document.write("Diện tích hình tròn có bán kính " + input + " là " + S);
