--- a/ss12_mang/luyen_tap_mang_1/bai_3.html
+++ b/ss12_mang/luyen_tap_mang_1/bai_3.html
@@ -8,7 +8,7 @@
 <script>
     let a = +prompt("Nhập độ dài mảng");
     let array = [];
-    let max = 0;
+    let max = array[0];
     let tong = 0;
     let trungBinh = 0;
     for (let i = 0; i < a; i++) {
