--- a/ss7_bien_kieu_du_lieu_va_toan_tu/bai_tap_bien_kieu_du_lieu_va_toan_tu/bai_4.html
+++ b/ss7_bien_kieu_du_lieu_va_toan_tu/bai_tap_bien_kieu_du_lieu_va_toan_tu/bai_4.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    input = prompt("Nhập bán kính");
+    let input = prompt("Nhập bán kính");
     const a = 3.14;
     let C = input * 2 * a;
     document.write("Chu vi hình tròn có bán kính " + input + " là " + C);
