--- a/case_study/task_3/bai_1.html
+++ b/case_study/task_3/bai_1.html
@@ -8,16 +8,19 @@
 <script>
     let n = +prompt("Nhập độ dài mảng 1");
     let arr = [];
-    let arr1 = [];
     for (let i = 0; i < n; i++) {
         arr[i] = +prompt("Nhập số nguyên thứ " + (i + 1));
     }
     document.write(arr + "<br>");
-    arr1[0] = arr[0];
-    for (let i = 0; i < arr.length - 1; i++) {
-        arr1[i + 1] = arr1[i] + arr[i + 1];
+    function prefixSums(arr) {
+        let arr1 = [];
+        arr1[0] = arr[0];
+        for (let i = 0; i < arr.length - 1; i++) {
+            arr1[i + 1] = arr1[i] + arr[i + 1];
+        }
+        document.write(arr1);
     }
-    document.write(arr1);
+    prefixSums(arr);
 </script>
 </body>
 </html>
