--- a/case_study/task_4/bai_2.html
+++ b/case_study/task_4/bai_2.html
@@ -8,16 +8,21 @@
 <script>
     let string = prompt("Nhập chuỗi ký tự bất kỳ");
     let arr = string.split("");
-    let arr1 = [];
-    let count = 0;
     document.write(string + "<br>");
-    for (let i = 0; i < arr.length; i++) {
-        if (arr1.indexOf(arr[i]) === -1) {
-            arr1.push(arr[i]);
-            count++;
+
+    function differentSymbolsNaive(arr) {
+        let arr1 = [];
+        let count = 0;
+        for (let i = 0; i < arr.length; i++) {
+            if (arr1.indexOf(arr[i]) === -1) {
+                arr1.push(arr[i]);
+                count++;
+            }
         }
+        document.write("Chuỗi ban đầu có " + count + " ký tự khác nhau: " + arr1);
     }
-    document.write("Chuỗi ban đầu có " + count + " ký tự khác nhau: " + arr1);
+
+    differentSymbolsNaive(arr);
 </script>
 </body>
 </html>
