--- a/case_study/task_4/bai_3.html
+++ b/case_study/task_4/bai_3.html
@@ -11,16 +11,21 @@
     let str2 = prompt("Nhập chuỗi ký tự 2");
     let arr2 = str2.split("");
     document.write(str1 + "<br>" + str2 + "<br>");
-    let arrNew = [];
-    let count = 0;
-    for (let i = 0; i < arr1.length; i++) {
-        if (arr2.indexOf(arr1[i]) !== -1) {
-            count++;
-            arrNew.push(arr1[i]);
-            arr2.splice(arr2.indexOf(arr1[i]), 1);
+
+    function commonCharacterCount(arr1, arr2) {
+        let arrNew = [];
+        let count = 0;
+        for (let i = 0; i < arr1.length; i++) {
+            if (arr2.indexOf(arr1[i]) !== -1) {
+                count++;
+                arrNew.push(arr1[i]);
+                arr2.splice(arr2.indexOf(arr1[i]), 1);
+            }
         }
+        document.write("Hai chuỗi 1 và 2 có: " + count + " ký tự chung: " + arrNew);
     }
-    document.write("Hai chuỗi 1 và 2 có: " + count + " ký tự chung: " + arrNew);
+
+    commonCharacterCount(arr1, arr2);
 </script>
 </body>
 </html>
