--- a/case_study/task_5/bai_1.html
+++ b/case_study/task_5/bai_1.html
@@ -18,20 +18,37 @@
         arr2Chieu.push(arr);
     }
     document.write(arr2Chieu + "<br>");
-    tinhTongChan(arr2Chieu);
-
-    function tinhTongChan(arr2Chieu) {
-        let tongChan = 0;
-        for (let i = 0; i < arr2Chieu.length; i++) {
-            for (let j = 0; j < arr2Chieu[i].length; j++) {
-                if (arr2Chieu[i][j] % 2 === 0) {
-                    tongChan += arr2Chieu[i][j];
-                    document.write(arr2Chieu[i][j] + ", ");
-                }
+    let tongChan = 0;
+    for (let i = 0; i < arr2Chieu.length; i++) {
+        for (let j = 0; j < arr2Chieu[i].length; j++) {
+            if (tinhTongChan(arr2Chieu[i][j])) {
+                tongChan += arr2Chieu[i][j];
             }
         }
-        document.write("<br>" + "Tổng các số chẵn có trong ma trận: " + tongChan);
     }
+    document.write("Tổng các số chẵn có trong ma trận: " + tongChan);
+
+    function tinhTongChan(number) {
+        if (number % 2 === 0) {
+            return true;
+        }
+        return false;
+    }
+
+    // tinhTongChan(arr2Chieu);
+    //
+    // function tinhTongChan(arr2Chieu) {
+    //     let tongChan = 0;
+    //     for (let i = 0; i < arr2Chieu.length; i++) {
+    //         for (let j = 0; j < arr2Chieu[i].length; j++) {
+    //             if (arr2Chieu[i][j] % 2 === 0) {
+    //                 tongChan += arr2Chieu[i][j];
+    //                 document.write(arr2Chieu[i][j] + ", ");
+    //             }
+    //         }
+    //     }
+    //     document.write("<br>" + "Tổng các số chẵn có trong ma trận: " + tongChan);
+    // }
 </script>
 </body>
 </html>
